tests/miniJava/neg/003499_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if class 0 ) { } else { } } }
